--- a/main.html
+++ b/main.html
@@ -7,11 +7,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="main.css">
-  <script type="text/javascript" src="path/to/script.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+  <script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
   <title>Douglas Barr</title>
 </head>
 <header>
@@ -29,7 +29,7 @@
             <button type="button" class="btn btn-default btn-md">Hire Me</button>
           </div>
         </div>
-        </center>
+      </center>
     </div>
 
   </div>
@@ -40,28 +40,34 @@
     <div class="row">
       <div class="col-md-2">Info Here</div>
       <div class="col-md-8 text-center">
-        <h2 id="about-me"><span class="second":>/ </span>About Me<span class="second"> /</span></h2>
+        <h2 id="about-me"><span class="second">/ </span>About Me<span class="second"> /</span></h2>
         <p id="about">I am a freelance web developer from Sacramento California. I specialize in creating simple yet functional and responsive websites for local small businesses. I currently work with HTML, CSS, Javascript and several in demand libraries & frameworks
           to deliver beautiful interactive web sites.
         </p>
       </div>
-      <div class="col-md-2">Info Here</div>
+      <div class="col-md-2"></div>
     </div>
     <div class="row">
-      <div class="col-sm-4"></div>
+      <div class="col-sm-2">Content</div>
       <div class="col-sm-1"><i class="fab fa-html5 fa-5x" style="color:#ff8c00;"></i></div>
       <div class="col-sm-1"><i class="fab fa-css3-alt fa-5x" style="color:#009acd;"></i></div>
       <div class="col-sm-1">
-        <!--<i class="fab fa-python fa-5x" style="color:#eeee00;"></i>--></div>
+        <i class="fab fa-python fa-5x" style="color:#eeee00;"></i></div>
+      <div class="col-sm-1">Content
+        <i class="fab fa-vuejs fa-5x" style="color:#2e8b57;"></i>
+      </div>
       <div class="col-sm-1">
-        <!--<i class="fab fa-vuejs fa-5x" style="color:#2e8b57;"></i>--></div>
-      <div class="col-sm-1"><i class="fab fa-js-square fa-5x" style="color:#ffd700;"></i></div>
-      <div class="col-sm-1"><i class="fab fa-react fa-5x" style="color:#48d1cc;"></i></div>
-      <div class="col-sm-4"></div>
+        <i class="fab fa-js-square fa-5x" style="color:#ffd700;"></i>
+      </div>
+      <div class="col-sm-1">
+        <i class="fab fa-react fa-5x" style="color:#48d1cc;"></i>
+      </div>
+      <div class="col-sm-2">Content
+      </div>
     </div>
   </div>
   <!--Services|Above|||My Work|Below-->
-  <div class="parallax-two my-work">
+  <div class="parallax-two">
     <div class="container text-center">
       <h2 id="my-work"><span class="second"> < </span>My Work<span class="second"> > </span></h2>
       <div class="row">
@@ -78,7 +84,7 @@
       </div>
     </div>
   </div>
-  
+
 
 </body>
 <footer>
@@ -101,10 +107,11 @@
       </div>
     </form>
   </div>
+
   <!--Contact Above||Footer Below-->
   <div class="container">
     <div class="row">
-      <div class="col-lg-3 text-center">Empty for now</div>
+      <div class="col-lg-3 text-center">Content</div>
       <div class="col-lg-1"><a href="https://github.com/dsrbarr" title="Github" target="_blank" style="color:white;"><i class="fab fa-github-square fa-2x"></i></a>
       </div>
       <div class="col-lg-1 text-center"><a href="https://www.linkedin.com/in/barrdouglas/" title="LinkedIn" target="blank" style="color:white;"><i class="fab fa-linkedin-in fa-2x"></i></a>
@@ -117,6 +124,7 @@
       <div class="col-lg-3 text-right"><span id="me">designed & developed by me :: twentyeighteen</span></div>
     </div>
   </div>
+
 </footer>
 
 </html>
