Changed background images, other minor changes.

--- a/main.html
+++ b/main.html
@@ -20,7 +20,7 @@
     <div class="container">
       <center id="intro">
         <div>
-          <h1 id="db">D <span id="second">/</span> B</h1>
+          <h1 id="db">D <span class="second"> / </span> B</h1>
         </div>
         <p id="logo">focused on designing beautiful and functional user experiences</p>
         <div class="text-center">
@@ -69,9 +69,13 @@
   <!--Services|Above|||My Work|Below-->
   <div class="parallax-two">
     <div class="container text-center">
-      <h2 id="my-work"><span class="second"> < </span>My Work<span class="second"> > </span></h2>
+      <h2 id="my-work"><span class="second">/ </span>My Work<span class="second"> /</span></h2>
       <div class="row">
-        <div class="col-md-3">Project One</div>
+        <div class="col-md-3">Project One
+          <div class="card">
+
+          </div>
+        </div>
         <div class="col-md-3">Project Two</div>
         <div class="col-md-3">Project Three</div>
         <div class="col-md-3">Project Four</div>
@@ -106,25 +110,38 @@
       <div class="send text-center" title="Send"><span><i class="far fa-paper-plane fa-2x"></i></span>
       </div>
     </form>
-  </div>
-
-  <!--Contact Above||Footer Below-->
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-3 text-center">Content</div>
-      <div class="col-lg-1"><a href="https://github.com/dsrbarr" title="Github" target="_blank" style="color:white;"><i class="fab fa-github-square fa-2x"></i></a>
-      </div>
-      <div class="col-lg-1 text-center"><a href="https://www.linkedin.com/in/barrdouglas/" title="LinkedIn" target="blank" style="color:white;"><i class="fab fa-linkedin-in fa-2x"></i></a>
-      </div>
-      <div class="col-lg-2 text-center"><a href="#TOP"><i class="fas fa-asterisk fa-2x fa-spin" style="color:#ffd700;"></i></a></div>
-      <div class="col-lg-1"><a href="https://codepen.io/dsrbarr/#" title="Codepen.io" target="_blank" style="color:white;"><i class="fab fa-codepen fa-2x"></i></a>
-      </div>
-      <div class="col-lg-1 text-center"><a href="https://stackoverflow.com/users/story/5302812" title="Stack Overflow" target="_blank" style="color:white;"><i class="fab fa-stack-overflow fa-2x"></i></a>
-      </div>
-      <div class="col-lg-3 text-right"><span id="me">designed & developed by me :: twentyeighteen</span></div>
+</footer>
+<!--Contact Above||Footer Below-->
+<div class="container">
+  <div class="row">
+    <div class="col-lg-3 text-center">Douglas Barr</div>
+    <div class="col-lg-1">
+      <a href="https://github.com/dsrbarr" title="Github" target="_blank" style="color:white;">
+        <i class="fab fa-github-square fa-2x"></i></a>
+    </div>
+    <div class="col-lg-1 text-center">
+      <a href="https://www.linkedin.com/in/barrdouglas/" title="LinkedIn" target="blank" style="color:white;">
+        <i class="fab fa-linkedin-in fa-2x"></i>
+      </a>
+    </div>
+    <div class="col-lg-2 text-center">
+      <a href="#TOP"><i class="fas fa-asterisk fa-2x fa-spin" style="color:#ffd700;"></i></a>
+    </div>
+    <div class="col-lg-1">
+      <a href="https://codepen.io/dsrbarr/#" title="Codepen.io" target="_blank" style="color:white;"><i class="fab fa-codepen fa-2x"></i>
+      </a>
+    </div>
+    <div class="col-lg-1 text-center">
+      <a href="https://stackoverflow.com/users/story/5302812" title="Stack Overflow" target="_blank" style="color:white;"><i class="fab fa-stack-overflow fa-2x"></i>
+      </a>
+    </div>
+    <div class="col-lg-3 text-right">
+      <span id="me">designed & developed by me :: twentyeighteen</span>
     </div>
   </div>
+</div>
+</div>
 
-</footer>
+
 
 </html>
