--- a/main.html
+++ b/main.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="main.css">
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
@@ -22,126 +22,80 @@
         <div>
           <h1 id="db">D <span class="second"> / </span> B</h1>
         </div>
-        <p id="logo">focused on designing beautiful and functional user experiences</p>
+        <p id="logo">Freelance. Designer & Developer</p>
         <div class="text-center">
-          <div class="introbutton">
-            <button type="button" class="btn btn-default btn-md">My Work</button>
-            <button type="button" class="btn btn-default btn-md">Hire Me</button>
+          <div class="wildfire">
+            <a class="btn btn-default btn-lg fire" href="https://deloro.salvationarmy.org/del_oro/northern-california-wildfires" type="button" title="NORCAL Salvation Army" target="_blank">Help California Wildfire Victims</a>
           </div>
         </div>
       </center>
     </div>
-
   </div>
 </header>
 
 <body>
-  <div class="container">
+  <div class="container.fluid about">
     <div class="row">
-      <div class="col-md-2">Info Here</div>
-      <div class="col-md-8 text-center">
-        <h2 id="about-me"><span class="second">/ </span>About Me<span class="second"> /</span></h2>
-        <p id="about">I am a freelance web developer from Sacramento California. I specialize in creating simple yet functional and responsive websites for local small businesses. I currently work with HTML, CSS, Javascript and several in demand libraries & frameworks
-          to deliver beautiful interactive web sites.
+      <div class="col-md-12 text-center">
+        <h2 id="about-me">/ About Me /</h2>
+        <p id="about">
+          Freelance front end developer in Northern Caliornia.
         </p>
       </div>
-      <div class="col-md-2"></div>
     </div>
+  </div>
+  <div class="container.fluid about-p2">
     <div class="row">
-      <div class="col-sm-2">Content</div>
-      <div class="col-sm-1"><i class="fab fa-html5 fa-5x" style="color:#ff8c00;"></i></div>
-      <div class="col-sm-1"><i class="fab fa-css3-alt fa-5x" style="color:#009acd;"></i></div>
-      <div class="col-sm-1">
-        <i class="fab fa-python fa-5x" style="color:#eeee00;"></i></div>
-      <div class="col-sm-1">Content
-        <i class="fab fa-vuejs fa-5x" style="color:#2e8b57;"></i>
-      </div>
-      <div class="col-sm-1">
+      <div class="col-md-12 text-center"><i class="fab fa-html5 fa-5x" style="color:#ff8c00;"></i>
+        <i class="fab fa-css3-alt fa-5x" style="color:#009acd;"></i>
+        <i class="fab fa-python fa-5x" style="color:#eeee00;"></i>
         <i class="fab fa-js-square fa-5x" style="color:#ffd700;"></i>
-      </div>
-      <div class="col-sm-1">
+        <i class="fab fa-vuejs fa-5x" style="color:#2e8b57;"></i>
         <i class="fab fa-react fa-5x" style="color:#48d1cc;"></i>
-      </div>
-      <div class="col-sm-2">Content
       </div>
     </div>
   </div>
   <!--Services|Above|||My Work|Below-->
   <div class="parallax-two">
-    <div class="container text-center">
-      <h2 id="my-work"><span class="second">/ </span>My Work<span class="second"> /</span></h2>
-      <div class="row">
-        <div class="col-md-3">Project One
-          <div class="card">
+    <h2 id="my-work text-center">My Work</h2>
 
-          </div>
-        </div>
-        <div class="col-md-3">Project Two</div>
-        <div class="col-md-3">Project Three</div>
-        <div class="col-md-3">Project Four</div>
-      </div>
-      <div class="row">
-        <div class="col-md-3">Project Five</div>
-        <div class="col-md-3">Project Six</div>
-        <div class="col-md-3">Project Seven</div>
-        <div class="col-md-3">Project Eight</div>
-      </div>
-    </div>
+
+
+
+
   </div>
 
 
 </body>
 <footer>
-  <div class="parallax-three">
-    <form>
-      <h1 class="text-center Get-In-Touch"><span class="second">{ </span>Get In Touch<span class="second"> }</span></h1>
-      <div class="form-group">
-        <label for="name"><span><i class="fas fa-signature"></i></span></label>
-        <input type="text" class="form-control" id="name" placeholder="Name">
+  <div class="contact-box">
+    <center>
+      <h2 id="contact-header">let's get in touch</h2>
+      <a class="btn btn-default btn-lg start" href="contact.html" type="button" title="Contact Form" target="_blank">Start</a>
+    </center>
+  </div>
+  <!--Contact Above||Footer Below-->
+  <div class="container.fluid">
+    <div class="row">
+      <div class="col-sm-5 pull-left orange-fill">
+        <a href="https://github.com/dsrbarr" title="Github" target="_blank" style="color:white;">
+          <i class="fab fa-github-square fa-2x"></i></a>
+        <a href="https://www.linkedin.com/in/barrdouglas/" title="LinkedIn" target="blank" style="color:white;">
+          <i class="fab fa-linkedin-in fa-2x"></i></a>
       </div>
-      <div class="form-group">
-        <label for="email"><span><i class="far fa-envelope"></i></span></label>
-        <input type="email" class="form-control" id="email" placeholder="email">
+      <div class="col-sm-2 text-center">
+        <a href="#TOP">
+          <i class="fas fa-level-up-alt fa-2x" style="color:#ffd700;"></i></a>
       </div>
-      <div class="form-group">
-        <label for="summary"><span><i class="fas fa-pen-alt"></i></span></label>
-        <textarea class="form-control" rows="4" id="summary" placeholder="Breif Summary"></textarea>
+      <div class="col-sm-5 text-right orange-fill">
+        <a href="https://codepen.io/dsrbarr/#" title="Codepen.io" target="_blank" style="color:white;">
+          <i class="fab fa-codepen fa-2x"></i>
+        </a>
+        <a href="https://stackoverflow.com/users/story/5302812" title="Stack Overflow" target="_blank" style="color:white;">
+          <i class="fab fa-stack-overflow fa-2x"></i></a>
       </div>
-      <div class="send text-center" title="Send"><span><i class="far fa-paper-plane fa-2x"></i></span>
-      </div>
-    </form>
-</footer>
-<!--Contact Above||Footer Below-->
-<div class="container">
-  <div class="row">
-    <div class="col-lg-3 text-center">Douglas Barr</div>
-    <div class="col-lg-1">
-      <a href="https://github.com/dsrbarr" title="Github" target="_blank" style="color:white;">
-        <i class="fab fa-github-square fa-2x"></i></a>
-    </div>
-    <div class="col-lg-1 text-center">
-      <a href="https://www.linkedin.com/in/barrdouglas/" title="LinkedIn" target="blank" style="color:white;">
-        <i class="fab fa-linkedin-in fa-2x"></i>
-      </a>
-    </div>
-    <div class="col-lg-2 text-center">
-      <a href="#TOP"><i class="fas fa-asterisk fa-2x fa-spin" style="color:#ffd700;"></i></a>
-    </div>
-    <div class="col-lg-1">
-      <a href="https://codepen.io/dsrbarr/#" title="Codepen.io" target="_blank" style="color:white;"><i class="fab fa-codepen fa-2x"></i>
-      </a>
-    </div>
-    <div class="col-lg-1 text-center">
-      <a href="https://stackoverflow.com/users/story/5302812" title="Stack Overflow" target="_blank" style="color:white;"><i class="fab fa-stack-overflow fa-2x"></i>
-      </a>
-    </div>
-    <div class="col-lg-3 text-right">
-      <span id="me">designed & developed by me :: twentyeighteen</span>
     </div>
   </div>
-</div>
-</div>
-
-
+</footer>
 
 </html>
