--- a/main.html
+++ b/main.html
@@ -17,18 +17,10 @@
 <header>
   <div id="TOP"></div>
   <div class="parallax-one">
-    <div class="container">
-      <center id="intro">
-        <div>
-          <h1 id="db">D <span class="second"> / </span> B</h1>
-        </div>
-        <p id="logo">Freelance. Designer & Developer</p>
-        <div class="text-center">
-          <div class="wildfire">
-            <a class="btn btn-default btn-lg fire" href="https://deloro.salvationarmy.org/del_oro/northern-california-wildfires" type="button" title="NORCAL Salvation Army" target="_blank">Help California Wildfire Victims</a>
-          </div>
-        </div>
-      </center>
+    <div class="container.fluid">
+      <h1 id="db">D <span class="second"> / </span> B</h1>
+      <p class="main">Freelance. Designer & Developer</p>
+      <a class="btn btn-default btn-lg fire" href="https://deloro.salvationarmy.org/del_oro/northern-california-wildfires" type="button" title="NORCAL Salvation Army" target="_blank">Help California Wildfire Victims</a>
     </div>
   </div>
 </header>
