--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
 
 <body>
   <center>
-    <form name="contactform" methond="post" action="send_form_email.php">
+    <form action="send_form_email.php" method="post" name="contactform">
       <div class="form-group">
         <label for="name"></label>
         <input type="text" class="form-control" id="name" placeholder="Name">
